Fix URLs in config.yml

--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -177,8 +177,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/career" title="Career">
-                    <span>Career</span>
+                <a href="https://dhtzs.dev/overview" title="Overview">
+                    <span>Overview</span>
                 </a>
             </li>
         </ul>
