Add write-ups page and update site navigation

--- a/public/404.html
+++ b/public/404.html
@@ -131,6 +131,11 @@
                     <span>Overview</span>
                 </a>
             </li>
+            <li>
+                <a href="https://dhtzs.dev/write-ups" title="Write-ups">
+                    <span>Write-ups</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -139,12 +144,12 @@
     </main>
     
 <footer class="footer">
-    <span>© 2023 Dimitris Chatzis. All rights reserved.</span>
-    <span>
-        Powered by
+    <p>Copyright &copy; 2023 - 2024 | All rights reserved</p>
+    <p>&lt;/&gt; with ❤️ and ☕ by Dimitris Chatzis</p>
+    <p>Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-    </span>
+    </p>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
