Update favicon and description in content files

--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>About me | dhtzs.dev</title>
 <meta name="keywords" content="Dimitris Chatzis, about me">
-<meta name="description" content="Discover &#39;About Me&#39; - A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving.">
+<meta name="description" content="Discover about me — A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/about-me/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css" integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO&#43;tN6uT1w=" rel="preload stylesheet" as="style">
@@ -66,7 +66,7 @@
         font-family: 'Nunito', sans-serif !important;
     }
 </style><meta property="og:title" content="About me" />
-<meta property="og:description" content="Discover &#39;About Me&#39; - A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving." />
+<meta property="og:description" content="Discover about me — A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://dhtzs.dev/about-me/" /><meta property="article:section" content="" />
 
@@ -74,7 +74,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About me"/>
-<meta name="twitter:description" content="Discover &#39;About Me&#39; - A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving."/>
+<meta name="twitter:description" content="Discover about me — A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving."/>
 
 
 <script type="application/ld+json">
@@ -97,7 +97,7 @@
   "@type": "BlogPosting",
   "headline": "About me",
   "name": "About me",
-  "description": "Discover 'About Me' - A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving.",
+  "description": "Discover about me — A Digital Systems student and ethical hacker passionate about cybersecurity challenges and creative problem-solving.",
   "keywords": [
     "Dimitris Chatzis", "about me"
   ],
