--- a/public/overview/index.html
+++ b/public/overview/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>Overview | dhtzs.dev</title>
 <meta name="keywords" content="Dimitris Chatzis, overview">
-<meta name="description" content="Dive into my profile &#39;Overview&#39; - Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches.">
+<meta name="description" content="Dive into my profile overview — Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/overview/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css" integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO&#43;tN6uT1w=" rel="preload stylesheet" as="style">
@@ -66,7 +66,7 @@
         font-family: 'Nunito', sans-serif !important;
     }
 </style><meta property="og:title" content="Overview" />
-<meta property="og:description" content="Dive into my profile &#39;Overview&#39; - Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches." />
+<meta property="og:description" content="Dive into my profile overview — Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://dhtzs.dev/overview/" /><meta property="article:section" content="" />
 
@@ -74,7 +74,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Overview"/>
-<meta name="twitter:description" content="Dive into my profile &#39;Overview&#39; - Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches."/>
+<meta name="twitter:description" content="Dive into my profile overview — Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches."/>
 
 
 <script type="application/ld+json">
@@ -97,7 +97,7 @@
   "@type": "BlogPosting",
   "headline": "Overview",
   "name": "Overview",
-  "description": "Dive into my profile 'Overview' - Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches.",
+  "description": "Dive into my profile overview — Explore my expertise on HackerOne, Bugcrowd, and Intigriti, showcasing a commitment to fortifying cybersecurity through methodical approaches.",
   "keywords": [
     "Dimitris Chatzis", "overview"
   ],
