Update CSS styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Portfolio of Dimitris Chatzis">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css" integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO&#43;tN6uT1w=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.b8c3fc66da5a5f52abf98ce194e7e782e16f5e896c5c225e5eb45ab1ffbf6194.css" integrity="sha256-uMP8ZtpaX1Kr&#43;YzhlOfnguFvXolsXCJeXrRasf&#43;/YZQ=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -156,9 +156,9 @@
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <picture>
-            <source type="image/webp" srcset="https://dhtzs.dev/assets/images/profile.webp" height="150" width="150" />
-            <source type="image/jpeg" srcset="https://dhtzs.dev/assets/images/profile.jpg" height="150" width="150" />
-            <img draggable="false" src="https://dhtzs.dev/assets/images/profile.jpg" alt="Dimitris Chatzis" title="Dimitris Chatzis" height="150" width="150" />
+            <source type="image/webp" srcset="https://dhtzs.dev/images/profile.webp" height="150" width="150" />
+            <source type="image/jpeg" srcset="https://dhtzs.dev/images/profile.jpg" height="150" width="150" />
+            <img draggable="false" src="https://dhtzs.dev/images/profile.jpg" alt="Dimitris Chatzis" title="Dimitris Chatzis" height="150" width="150" />
         </picture>
         <h1>Dimitris Chatzis</h1>
         <span>Student of <a href="https://ds.uth.gr/en" target="_blank">Digital Systems</a> in <a href="https://www.uth.gr/en" target="_blank">University of Thessaly</a>, programmer and hacking enthusiast. Bug Bounty Hunter at HackerOne, Bugcrowd and Intigriti.</span><div class="social-icons">
