--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Portfolio of Dimitris Chatzis">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.b8c3fc66da5a5f52abf98ce194e7e782e16f5e896c5c225e5eb45ab1ffbf6194.css" integrity="sha256-uMP8ZtpaX1Kr&#43;YzhlOfnguFvXolsXCJeXrRasf&#43;/YZQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d01dd1350714100f774dd955702bd814c794f38f6c3522ea7026531703c15efd.css" integrity="sha256-0B3RNQcUEA93TdlVcCvYFMeU849sNSLqcCZTFwPBXv0=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -66,7 +66,18 @@
     html, body {
         font-family: 'Nunito', sans-serif !important;
     }
-</style><meta property="og:title" content="dhtzs.dev" />
+</style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-LVC4CS3028', { 'anonymize_ip': false });
+}
+</script>
+<meta property="og:title" content="dhtzs.dev" />
 <meta property="og:description" content="Portfolio of Dimitris Chatzis" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://dhtzs.dev/" /><meta property="og:site_name" content="Dimitris Chatzis - Portfolio" />
@@ -131,18 +142,13 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://dhtzs.dev/" title="Profile">
-                    <span class="active">Profile</span>
+                <a href="https://dhtzs.dev/" title="Home">
+                    <span class="active">Home</span>
                 </a>
             </li>
             <li>
                 <a href="https://dhtzs.dev/about-me" title="About me">
                     <span>About me</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://dhtzs.dev/overview" title="Overview">
-                    <span>Overview</span>
                 </a>
             </li>
             <li>
@@ -221,12 +227,8 @@
     </main>
     
 <footer class="footer">
-    <p>Copyright &copy; 2023 - 2024 | All rights reserved</p>
+    <p>Copyright &copy; 2024 | All rights reserved</p>
     <p>&lt;/&gt; with ❤️ and ☕ by Dimitris Chatzis</p>
-    <p>Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-    </p>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
