Update social icons

--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/write-ups/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d01dd1350714100f774dd955702bd814c794f38f6c3522ea7026531703c15efd.css" integrity="sha256-0B3RNQcUEA93TdlVcCvYFMeU849sNSLqcCZTFwPBXv0=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.516030663867d0f53683ada15aa15101955a050bd301972d1afbaa7b017843d2.css" integrity="sha256-UWAwZjhn0PU2g62hWqFRAZVaBQvTAZctGvuqewF4Q9I=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -61,11 +61,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
-<style>
-    html, body {
-        font-family: 'Nunito', sans-serif !important;
-    }
-</style>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
 <script>
 var doNotTrack = false;
@@ -241,7 +236,7 @@ if (!doNotTrack) {
     if (email) {
         email.addEventListener("click", function (e) {
             e.preventDefault();
-            window.location.href = atob(this.getAttribute("href"));
+            window.location.href = atob("bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbQ==");
         });
     }
 </script>
