--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Portfolio of Dimitris Chatzis">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.516030663867d0f53683ada15aa15101955a050bd301972d1afbaa7b017843d2.css" integrity="sha256-UWAwZjhn0PU2g62hWqFRAZVaBQvTAZctGvuqewF4Q9I=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.7f6e46f355effbb3b1900ebe308d9deea152282e4fe1ff01e3f3612bbdec5372.css" integrity="sha256-f25G81Xv&#43;7OxkA6&#43;MI2d7qFSKC5P4f8B4/NhK73sU3I=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -35,7 +35,7 @@
                 --secondary: rgb(155, 156, 157);
                 --tertiary: rgb(65, 66, 68);
                 --content: rgb(196, 196, 197);
-                --hljs-bg: rgb(46, 46, 51);
+                --code-block-bg: rgb(46, 46, 51);
                 --code-bg: rgb(55, 56, 62);
                 --border: rgb(51, 51, 51);
             }
