--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" type="application/rss+xml" href="https://dhtzs.dev/index.xml">
 <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json">
 <noscript>
     <style>
