--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/about-me/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.7f6e46f355effbb3b1900ebe308d9deea152282e4fe1ff01e3f3612bbdec5372.css" integrity="sha256-f25G81Xv&#43;7OxkA6&#43;MI2d7qFSKC5P4f8B4/NhK73sU3I=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.3024f4cbd3983bb1b151ff60a41e1dda4eed44ab2e4dd3d16a747a43833858c2.css" integrity="sha256-MCT0y9OYO7GxUf9gpB4d2k7tRKsuTdPRanR6Q4M4WMI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -246,7 +246,7 @@ if (!doNotTrack) {
     
 <footer class="footer">
     <p>Copyright &copy; 2024 | All rights reserved</p>
-    <p>&lt;/&gt; with ❤️ and ☕ by Dimitris Chatzis</p>
+    <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg> with <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> and <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> by Dimitris Chatzis</p>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
