--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Portfolio of Dimitris Chatzis">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.3024f4cbd3983bb1b151ff60a41e1dda4eed44ab2e4dd3d16a747a43833858c2.css" integrity="sha256-MCT0y9OYO7GxUf9gpB4d2k7tRKsuTdPRanR6Q4M4WMI=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.683b22fb72aa8c51ba9d2b293b1a2702418ad41e60895adcd1d02fbe18e0ab49.css" integrity="sha256-aDsi&#43;3KqjFG6nSspOxonAkGK1B5giVrc0dAvvhjgq0k=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
