--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -6,11 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
 <title>About me | dhtzs.dev</title>
-<meta name="keywords" content="Dimitris Chatzis, about me">
+<meta name="keywords" content="about me">
 <meta name="description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/about-me/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.683b22fb72aa8c51ba9d2b293b1a2702418ad41e60895adcd1d02fbe18e0ab49.css" integrity="sha256-aDsi&#43;3KqjFG6nSspOxonAkGK1B5giVrc0dAvvhjgq0k=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.5218f694e4ca9ea60fdcc9dfaed410cb45551cf47efa83e9f082f8147f958636.css" integrity="sha256-Uhj2lOTKnqYP3MnfrtQQy0VVHPR&#43;&#43;oPp8IL4FH&#43;VhjY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -74,11 +74,13 @@ if (!doNotTrack) {
 <meta property="og:title" content="About me" />
 <meta property="og:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://dhtzs.dev/about-me/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://dhtzs.dev/about-me/" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Dimitris Chatzis - Portfolio" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
+
 <meta name="twitter:title" content="About me"/>
 <meta name="twitter:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking."/>
 
@@ -105,7 +107,7 @@ if (!doNotTrack) {
   "name": "About me",
   "description": "Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking.",
   "keywords": [
-    "Dimitris Chatzis", "about me"
+    "about me"
   ],
   "articleBody": "Introduction Greetings! I’m Dimitris, a self-motivated fourth-year student currently immersed in Digital Systems at the University of Thessaly. My academic journey has not only honed my programming skills but has also fueled a deep-seated passion for ethical hacking and problem-solving.\nAs an avid bug bounty hunter, I bring a distinctive blend of knowledge, imagination, and hands-on experience to the realm of cybersecurity. Actively engaging with top bug bounty platforms, I collaborate with diverse organizations to identify and exploit vulnerabilities, contributing significantly to enhancing their security posture.\nThis journey is more than a pursuit; it’s a true passion that I approach with enthusiasm and dedication. Beyond my academic endeavors and bug bounty exploits, I am committed to continuous learning. In my spare time, I delve into relevant books, articles, and online courses, applying newfound knowledge to tackle hacking challenges. This perpetual learning cycle not only enhances my skills but also deepens my understanding of the dynamic field of cybersecurity.\nExperience and Contributions I’ve had the privilege of engaging with top bug bounty platforms, collaborating with diverse organizations to uncover vulnerabilities and bolster their security posture. In the dynamic landscape of cybersecurity, I prioritize a methodical and data-driven approach. My methodology encompasses a blend of manual testing, automated scanning, and targeted research to identify vulnerabilities. I’m continually exploring new tools and techniques to refine my process, with a specific focus on reconnaissance. My goal is to stay at the forefront of evolving attack vectors and exploitation techniques.\nThroughout my journey in 2022, I demonstrated consistent commitment and perseverance on HackerOne, earning recognition for my contributions. My focus remains on making meaningful contributions to the bug bounty community and refining my skills. If you’re interested in exploring my bug bounty hunting experience further, feel free to check out my profiles on HackerOne, Bugcrowd, and Intigriti. I welcome connections with fellow bug bounty enthusiasts and am always open to discussions on our shared passion.\nBug Bounty Profiles If you’d like to learn more about my bug bounty hunting experience, I encourage you to check out my profiles on each of the platforms I participate in:\nHackerOne Bugcrowd Intigriti On these platforms, you can see my profile, my past submissions, and my overall stats. Take the opportunity to check and see the impact that I’ve made on each platform. I’m always interested in connecting with others in the bug bounty community, so don’t hesitate to reach out and say hello.\nMethodology When it comes to bug bounty hunting, I believe in taking a methodical and data-driven approach. I rely on a combination of manual testing, automated scanning, and targeted research to identify vulnerabilities, and I’m always looking for new tools and techniques to improve my process. I have a particular expertise in reconnaissance, and I’m constantly studying new attack vectors and exploitation techniques to stay ahead of the curve.\n",
   "wordCount" : "474",
