--- a/public/404.html
+++ b/public/404.html
@@ -7,10 +7,10 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | dhtzs.dev</title>
 <meta name="keywords" content="">
-<meta name="description" content="Portfolio of Dimitris Chatzis">
+<meta name="description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.683b22fb72aa8c51ba9d2b293b1a2702418ad41e60895adcd1d02fbe18e0ab49.css" integrity="sha256-aDsi&#43;3KqjFG6nSspOxonAkGK1B5giVrc0dAvvhjgq0k=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.5218f694e4ca9ea60fdcc9dfaed410cb45551cf47efa83e9f082f8147f958636.css" integrity="sha256-Uhj2lOTKnqYP3MnfrtQQy0VVHPR&#43;&#43;oPp8IL4FH&#43;VhjY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -72,13 +72,15 @@ if (!doNotTrack) {
 }
 </script>
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Portfolio of Dimitris Chatzis" />
+<meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/404.html" /><meta property="og:site_name" content="Dimitris Chatzis - Portfolio" />
+<meta property="og:url" content="https://dhtzs.dev/404.html" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
+
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Portfolio of Dimitris Chatzis"/>
+<meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey."/>
 
 </head>
 
