Add search functionality

--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/write-ups/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.5218f694e4ca9ea60fdcc9dfaed410cb45551cf47efa83e9f082f8147f958636.css" integrity="sha256-Uhj2lOTKnqYP3MnfrtQQy0VVHPR&#43;&#43;oPp8IL4FH&#43;VhjY=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.9981b9ccee7844d53434b610221b6c601b8b463b60c6b1459ecd9b60caf777fd.css" integrity="sha256-mYG5zO54RNU0NLYQIhtsYBuLRjtgxrFFns2bYMr3d/0=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -171,6 +171,14 @@ if (!doNotTrack) {
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <a href="https://dhtzs.dev/search" id="search-toggle" accesskey="s" title="(Alt + S)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
+                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </a>
             </div>
         </div>
         <ul id="menu">
