--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.c6abeb4c24d0021cebd0a8c4c6811a400d57b2a5c0f5eedffeb77b365b0146fa.css" integrity="sha256-xqvrTCTQAhzr0KjExoEaQA1XsqXA9e7f/rd7NlsBRvo=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d9ca3e433567a444648fb90c31883fe9c2014dfe34a05793f2ec761c801064eb.css" integrity="sha256-2co&#43;QzVnpERkj7kMMYg/6cIBTf40oFeT8ux2HIAQZOs=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
