--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
 <meta name="author" content="Dimitris Chatzis">
 <link rel="canonical" href="https://dhtzs.dev/write-ups/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d9ca3e433567a444648fb90c31883fe9c2014dfe34a05793f2ec761c801064eb.css" integrity="sha256-2co&#43;QzVnpERkj7kMMYg/6cIBTf40oFeT8ux2HIAQZOs=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://dhtzs.dev/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://dhtzs.dev/favicons/favicon-32x32.png">
@@ -234,7 +234,7 @@ if (!doNotTrack) {
 
 <script>
     if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/sw.js", {
+        navigator.serviceWorker.register("\/sw.min.js", {
             updateViaCache: "none"
         }).catch(function(err) {
             return console.error(err);
