--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
-<link rel="alternate" type="application/rss+xml" href="https://dhtzs.dev/index.xml">
 <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json">
 <noscript>
     <style>
@@ -136,7 +135,7 @@ if (!doNotTrack) {
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
-                <a href="https://dhtzs.dev/search" id="search-toggle" accesskey="/" title="Search (Alt + /)">
+                <a href="https://dhtzs.dev/search/" id="search-toggle" accesskey="/" title="Search (Alt + /)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
@@ -153,12 +152,12 @@ if (!doNotTrack) {
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/about-me" title="About me">
+                <a href="https://dhtzs.dev/about-me/" title="About me">
                     <span>About me</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/write-ups" title="Write-ups">
+                <a href="https://dhtzs.dev/write-ups/" title="Write-ups">
                     <span>Write-ups</span>
                 </a>
             </li>
@@ -262,7 +261,7 @@ if (!doNotTrack) {
     if (email) {
         email.addEventListener("click", function (e) {
             e.preventDefault();
-            window.location.href = atob("bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbQ==");
+            window.location.href = atob("bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbT9zdWJqZWN0PUp1c3QlMjBzYXlpbmclMjBoaSE=");
         });
     }
 </script>
