--- a/public/404.html
+++ b/public/404.html
@@ -121,7 +121,7 @@ if (!doNotTrack) {
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
-                <a href="https://dhtzs.dev/search" id="search-toggle" accesskey="/" title="Search (Alt + /)">
+                <a href="https://dhtzs.dev/search/" id="search-toggle" accesskey="/" title="Search (Alt + /)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
@@ -138,12 +138,12 @@ if (!doNotTrack) {
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/about-me" title="About me">
+                <a href="https://dhtzs.dev/about-me/" title="About me">
                     <span>About me</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/write-ups" title="Write-ups">
+                <a href="https://dhtzs.dev/write-ups/" title="Write-ups">
                     <span>Write-ups</span>
                 </a>
             </li>
@@ -170,15 +170,6 @@ if (!doNotTrack) {
             updateViaCache: "none"
         }).catch(function(err) {
             return console.error(err);
-        });
-    }
-</script>
-<script>
-    var email = document.querySelector('a[title^="Email"]');
-    if (email) {
-        email.addEventListener("click", function (e) {
-            e.preventDefault();
-            window.location.href = atob("bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbQ==");
         });
     }
 </script>
