--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -195,6 +195,36 @@ if (!doNotTrack) {
         });
     }
 </script>
+<script>
+    if ("serviceWorker" in navigator && "caches" in window) {
+        let xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4) {
+                if (xhr.status === 0) {
+                    caches.open("offline-access").then(function (cache) {
+                        return cache.keys().then(function (keyList) {
+                            return Promise.all(keyList.map(function (key) {
+                                return key.url;
+                            }));
+                        }).then(function (keyList) {
+                            document.querySelectorAll(".post-entry").forEach(function (entry) {
+                                if (keyList.indexOf(entry.querySelector("a").href) !== -1) {
+                                    entry.style.borderColor = "#a6da95";
+                                    entry.style.pointerEvents = "auto";
+                                } else {
+                                    entry.style.borderColor = "#ed8796";
+                                    entry.style.pointerEvents = "none";
+                                }
+                            });
+                        });
+                    });
+                }
+            }
+        }
+        xhr.open("GET", "/ping?v" + Date.now(), true);
+        xhr.send();
+    }
+</script>
 
 <script>
     var menu = document.getElementById("menu")
