--- a/public/search/index.html
+++ b/public/search/index.html
@@ -20,6 +20,7 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/search/">
 <noscript>
     <style>
         #theme-toggle,
@@ -76,11 +77,12 @@ if (!doNotTrack) {
 <meta property="og:title" content="Search" />
 <meta property="og:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/search/" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
+<meta property="og:url" content="https://dhtzs.dev/search/" />
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
-
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
 <meta name="twitter:title" content="Search"/>
 <meta name="twitter:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions."/>
 
