--- a/public/404.html
+++ b/public/404.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -74,11 +75,12 @@ if (!doNotTrack) {
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/404.html" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
+<meta property="og:url" content="https://dhtzs.dev/404.html" />
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
-
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey."/>
 
@@ -134,7 +136,7 @@ if (!doNotTrack) {
         <ul id="menu">
             <li>
                 <a href="https://dhtzs.dev/" title="Home">
-                    <span class="active">Home</span>
+                    <span>Home</span>
                 </a>
             </li>
             <li>
