--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/about-me/">
 <noscript>
     <style>
         #theme-toggle,
@@ -74,11 +75,12 @@ if (!doNotTrack) {
 <meta property="og:title" content="About me" />
 <meta property="og:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/about-me/" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
+<meta property="og:url" content="https://dhtzs.dev/about-me/" />
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
-
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
 <meta name="twitter:title" content="About me"/>
 <meta name="twitter:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking."/>
 
