--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
 <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/">
 <noscript>
     <style>
         #theme-toggle,
@@ -75,11 +76,12 @@ if (!doNotTrack) {
 <meta property="og:title" content="dhtzs.dev" />
 <meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
+<meta property="og:url" content="https://dhtzs.dev/" />
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
-
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
 <meta name="twitter:title" content="dhtzs.dev"/>
 <meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey."/>
 
