--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/write-ups/">
 <noscript>
     <style>
         #theme-toggle,
@@ -74,11 +75,12 @@ if (!doNotTrack) {
 <meta property="og:title" content="Write-ups" />
 <meta property="og:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/write-ups/" /><meta property="og:image" content="https://dhtzs.dev/images/logo.png"/><meta property="og:site_name" content="Dimitris Chatzis" />
+<meta property="og:url" content="https://dhtzs.dev/write-ups/" />
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
+<meta property="og:site_name" content="Dimitris Chatzis" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png"/>
-
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
 <meta name="twitter:title" content="Write-ups"/>
 <meta name="twitter:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking."/>
 
