--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,6 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
-<link rel="alternate" hreflang="en" href="https://dhtzs.dev/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -64,7 +63,8 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
 <script>
-var doNotTrack = false;
+var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+var doNotTrack = (dnt == "1" || dnt == "yes");
 if (!doNotTrack) {
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
@@ -136,7 +136,7 @@ if (!doNotTrack) {
         <ul id="menu">
             <li>
                 <a href="https://dhtzs.dev/" title="Home">
-                    <span>Home</span>
+                    <span class="active">Home</span>
                 </a>
             </li>
             <li>
