--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
 <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json">
-<link rel="alternate" hreflang="en" href="https://dhtzs.dev/">
 <noscript>
     <style>
         #theme-toggle,
@@ -65,7 +64,8 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
 <script>
-var doNotTrack = false;
+var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+var doNotTrack = (dnt == "1" || dnt == "yes");
 if (!doNotTrack) {
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
