--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -60,17 +60,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
-<meta property="og:title" content="About me" />
-<meta property="og:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/about-me/" />
-<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
-<meta property="og:site_name" content="Dimitris Chatzis" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
-<meta name="twitter:title" content="About me"/>
-<meta name="twitter:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking."/>
+<meta property="og:title" content="About me">
+<meta property="og:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dhtzs.dev/about-me/">
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png">
+<meta property="og:site_name" content="Dimitris Chatzis">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
+<meta name="twitter:title" content="About me">
+<meta name="twitter:description" content="Discover about me — Explore my bug bounty journey, methodical cybersecurity approach, and impactful contributions in the dynamic realm of ethical hacking.">
 
 
 <script type="application/ld+json">
