--- a/public/index.html
+++ b/public/index.html
@@ -61,17 +61,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
-<meta property="og:title" content="dhtzs.dev" />
-<meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/" />
-<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
-<meta property="og:site_name" content="Dimitris Chatzis" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
-<meta name="twitter:title" content="dhtzs.dev"/>
-<meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey."/>
+<meta property="og:title" content="dhtzs.dev">
+<meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dhtzs.dev/">
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png">
+<meta property="og:site_name" content="Dimitris Chatzis">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
+<meta name="twitter:title" content="dhtzs.dev">
+<meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
 
 <script type="application/ld+json">
 {
@@ -80,7 +79,7 @@
   "name": "dhtzs.dev",
   "url": "https://dhtzs.dev/",
   "description": "Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.",
-  "thumbnailUrl": "https://dhtzs.dev/favicon.ico",
+  "logo": "https://dhtzs.dev/favicon.ico",
   "sameAs": [
       "https://linkedin.com/in/dimitris-chatzis", "https://twitter.com/dhtzs", "https://github.com/dhtzs", "https://hackerone.com/dhtzs", "https://bugcrowd.com/dhtzs", "https://intigriti.com/profile/dhtzs"
   ]
