--- a/public/search/index.html
+++ b/public/search/index.html
@@ -62,17 +62,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
-<meta property="og:title" content="Search" />
-<meta property="og:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/search/" />
-<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
-<meta property="og:site_name" content="Dimitris Chatzis" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
-<meta name="twitter:title" content="Search"/>
-<meta name="twitter:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions."/>
+<meta property="og:title" content="Search">
+<meta property="og:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dhtzs.dev/search/">
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png">
+<meta property="og:site_name" content="Dimitris Chatzis">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
+<meta name="twitter:title" content="Search">
+<meta name="twitter:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions.">
 
 
 <script type="application/ld+json">
