--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -60,17 +60,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
-<meta property="og:title" content="Write-ups" />
-<meta property="og:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/write-ups/" />
-<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
-<meta property="og:site_name" content="Dimitris Chatzis" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
-<meta name="twitter:title" content="Write-ups"/>
-<meta name="twitter:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking."/>
+<meta property="og:title" content="Write-ups">
+<meta property="og:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dhtzs.dev/write-ups/">
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png">
+<meta property="og:site_name" content="Dimitris Chatzis">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
+<meta name="twitter:title" content="Write-ups">
+<meta name="twitter:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
 
 
 <script type="application/ld+json">
