--- a/public/404.html
+++ b/public/404.html
@@ -60,17 +60,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
-<meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://dhtzs.dev/404.html" />
-<meta property="og:image" content="https://dhtzs.dev/images/logo.png" />
-<meta property="og:site_name" content="Dimitris Chatzis" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png" />
-<meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey."/>
+<meta property="og:title" content="404 Page not found">
+<meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dhtzs.dev/404.html">
+<meta property="og:image" content="https://dhtzs.dev/images/logo.png">
+<meta property="og:site_name" content="Dimitris Chatzis">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey.">
 
 </head>
 
